@@ -1,6 +1,6 @@
 Package: cluster
 Version: 1.13.2
-Date: 2010-10-21
+Date: 2010-11-08
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
