@@ -1,7 +1,8 @@
 
-R version 2.11.1 Patched (2010-05-31 r52179)
+R version 2.12.0 Patched (2010-11-05 r53534)
 Copyright (C) 2010 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -30,7 +31,7 @@ Type 'q()' to quit R.
 > ## full size sample {should be = pam()}:
 > n0 <- length(iSml <- c(1:70, 701:720))
 > summary(clara0 <- clara(x[iSml,], k = 2, sampsize = n0))
-Object of class `clara' from call:
+Object of class 'clara' from call:
  clara(x = x[iSml, ], k = 2, sampsize = n0) 
 Medoids:
           [,1]      [,2]
@@ -163,7 +164,7 @@ Available components:
 +           )
 > 
 > summary(clara2 <- clara(x, 2))
-Object of class `clara' from call:
+Object of class 'clara' from call:
  clara(x = x, k = 2) 
 Medoids:
           [,1]      [,2]
@@ -719,7 +720,7 @@ Available components:
  [1] "sample"     "medoids"    "i.med"      "clustering" "objective" 
  [6] "clusinfo"   "diss"       "call"       "silinfo"    "data"      
 > summary(clara(x5, 5, samples = 50))
-Object of class `clara' from call:
+Object of class 'clara' from call:
  clara(x = x5, k = 5, samples = 50) 
 Medoids:
            [,1]       [,2]        [,3]
@@ -1550,7 +1551,7 @@ $sample
 > 
 > ## Last Line:
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
-Time elapsed:  3.493 0.018 3.565 0 0 
+Time elapsed:  6.79 0.04 6.856 0 0 
 > ## Lynne (P IV, 1.6 GHz): 18.81; then (no NA; R 1.9.0-alpha): 15.07
 > ## nb-mm (P III,700 MHz): 27.97
 > 
